[package]
name = "mongo-experimental"
version = "0.1.0"
authors = ["Abraham Egnor <abraham.egnor@mongodb.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mongodb-11 = { path = "mongodb-11", optional = true }
mongodb-12 = { path = "mongodb-12", optional = true }

[features]
default = ["v11-tokio"]
tokio-runtime = []
async-std-runtime = []
sync = []
v11 = []
v11-tokio = ["v11", "tokio-runtime", "mongodb-11/tokio-runtime"]
v11-async-std = ["v11", "async-std-runtime", "mongodb-11/async-std-runtime"]
v11-sync = ["v11", "sync", "mongodb-11/sync"]
v12 = []
v12-tokio = ["v12", "tokio-runtime", "mongodb-12/tokio-runtime"]
v12-async-std = ["v12", "async-std-runtime", "mongodb-12/async-std-runtime"]
v12-sync = ["v12", "sync", "mongodb-12/sync"]