[package]
name = "mongo-experimental"
version = "0.1.0"
authors = ["Abraham Egnor <abraham.egnor@mongodb.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mongodb = { version = "= 1.1.*", default-features = false }
tokio = { version = "0.2.18", optional = true }
async-std = { version = "1.6.2", optional = true }

[features]
default = ["tokio-runtime"]
tokio-runtime = ["tokio", "mongodb/tokio-runtime"]
async-std-runtime = ["async-std", "mongodb/async-std-runtime"]
sync = ["mongodb/sync"]