[package]
name = "mongo-experimental"
version = "0.1.0"
authors = ["Abraham Egnor <abraham.egnor@mongodb.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mongodb = { version = "2.0.0-beta.1", default-features = false }
tokio = { version = "1.4.0", optional = true }
async-std = { version = "1.9.0", optional = true }

[features]
default = ["tokio-runtime"]
tokio-runtime = ["tokio", "mongodb/tokio-runtime"]
async-std-runtime = ["async-std", "mongodb/async-std-runtime"]
sync = ["mongodb/sync"]