[package]
name = "mongo-experimental"
version = "0.1.0"
authors = ["Abraham Egnor <abraham.egnor@mongodb.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mongodb = "1.1.1"

[features]
default = ["tokio"]
tokio = ["mongodb/tokio-runtime"]
async-std = ["mongodb/async-std-runtime"]
sync = ["mongodb/]