[package]
name = "mongo-experimental"
version = "0.1.0"
authors = ["Abraham Egnor <abraham.egnor@mongodb.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mongodb-111 = { package = "mongodb", version = "= 1.1.1", optional = true, default-features = false }
tokio-111 = { package = "tokio", version = "0.2.18", optional = true }
async-std-111 = { package = "async-std", version = "1.6.2", optional = true }

[features]
default = ["v111-tokio"]
sync = []
v111 = []
v111-tokio = ["v111", "tokio-111", "mongodb-111/tokio-runtime"]
v111-async-std = ["v111", "async-std-111", "mongodb-111/async-std-runtime"]
v111-sync = ["v111", "sync", "mongodb-111/sync"]